Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.CS

            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListPostWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPostWr(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListPreRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPreRd(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListPreWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPreWr(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgActivityRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgActivityRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgActivityWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_MsgActivityWr(UInt16 value, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgCheck", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgCheck(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgCommRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCommRd(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgCommWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCommWr(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgConfig(UInt32 configval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgCreateEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCreateEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgFieldRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgFieldRd(Int32 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgFieldWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgFieldWr(UInt32 fieldval, Int32 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgOptRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgOptRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgOptWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgReset", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgReset(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedAgain", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedAgain(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedBranchEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBranchEx(UInt16 condition1, UInt16 condition2, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedBuildEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBuildEx(Int32 nummsgs, UInt32[] msgs, Int32[] freq, Int32 interblockgap, Int32 rsvdblocks, Int32 bitrate, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedBuildExx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBuildExx(Int32 nummsgs, UInt32[] msgs, Int32[] freq, Int32 interblockgap, Int32 rsvdblocks, Int32 bitrate, IntPtr buf, UInt32 bufsize, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedCallEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedCallEx(UInt16 condition1, UInt16 condition2, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedGCD", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedGCD(Int32 a, Int32 b);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedLCM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedLCM(Int32 a, Int32 b);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedLogEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedLogEx(UInt16 condition1, UInt16 condition2, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedNop", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedNop(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedPulse0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPulse0(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedPulse1", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPulse1(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedUser", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedUser(UInt32 useraddr, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_TestProtocol", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_TestProtocol(IntPtr handleval);
        }
